@@ -2,8 +2,10 @@ package com.sweng.notes.repository;
 
 import com.sweng.notes.model.Note;
 import com.sweng.notes.model.Cartella;
-import com.sweng.notes.model.VersioneNota;
+import com.sweng.notes.model.Permesso;
 import com.sweng.notes.model.Privata;
+import com.sweng.notes.model.VersioneNota;
+
 import org.mapdb.*;
 import org.springframework.stereotype.Repository;
 
@@ -12,67 +14,109 @@ import java.time.LocalDateTime;
 import java.util.*;
 import java.util.concurrent.ConcurrentMap;
 
+/**
+ * Repository MapDB robusto, null-safe e coerente
+ * con le nuove regole di condivisione e versionamento.
+ */
 @Repository
 public class NoteRepository {
 
     private final DB db;
+
     private final ConcurrentMap<Integer, Note> notes;
     private final ConcurrentMap<String, Cartella> folders;
 
     private int idCounter;
 
-    private static final Comparator<Note> NOTE_DATE_DESC = Comparator
-            .comparing(Note::getCreatedAt, Comparator.nullsLast(Comparator.naturalOrder()))
-            .reversed();
+    private static final long LOCK_TIMEOUT_MINUTES = 10L;
+
+    // Comparator sicuro contro createdAt null
+    private static final Comparator<Note> NOTE_DATE_DESC = Comparator.comparing(
+            Note::getCreatedAt,
+            Comparator.nullsLast(Comparator.naturalOrder())).reversed();
 
     @SuppressWarnings("unchecked")
     public NoteRepository() {
+
         db = DBMaker.fileDB(new File("notes.db"))
                 .fileMmapEnableIfSupported()
                 .transactionEnable()
                 .closeOnJvmShutdown()
                 .make();
 
-        notes = db.hashMap("notes", Serializer.INTEGER, Serializer.JAVA).createOrOpen();
-        folders = db.hashMap("folders", Serializer.STRING, Serializer.JAVA).createOrOpen();
+        notes = db.hashMap("notes", Serializer.INTEGER, Serializer.JAVA)
+                .createOrOpen();
+
+        folders = db.hashMap("folders", Serializer.STRING, Serializer.JAVA)
+                .createOrOpen();
 
         idCounter = notes.isEmpty() ? 1 : Collections.max(notes.keySet()) + 1;
 
         normalizzaNote();
     }
 
-    // Costruttore per test
-    public NoteRepository(DB db, ConcurrentMap<Integer, Note> notes, ConcurrentMap<String, Cartella> folders) {
-        this.db = db;
-        this.notes = notes;
-        this.folders = folders;
-        this.idCounter = notes.isEmpty() ? 1 : Collections.max(notes.keySet()) + 1;
+    /**
+     * Normalizza eventuali note vecchie (retrocompatibilità)
+     */
+    private void normalizzaNote() {
+        for (Note n : notes.values()) {
+            if (n.getUtentiCondivisi() == null) {
+                n.setUtentiCondivisi(new LinkedHashSet<>());
+            }
+            if (n.getVersioni() == null) {
+                n.setVersioni(new ArrayList<>());
+            }
+            if (n.getPermesso() == null) {
+                n.setPermesso(new Privata());
+            }
+            if (n.getCreatedAt() == null) {
+                n.setCreatedAt(LocalDateTime.now());
+            }
+            if (n.getLockedBy() == null)
+                n.setLockedBy(null);
+
+            if (n.getLockedAt() == null)
+                n.setLockedAt(null);
+
+            if (n.getColoreCartella() == null || n.getColoreCartella().isBlank()) {
+                n.setColoreCartella("#ffb347"); // colore default
+            }
+        }
+        commit();
+    }
+
+    // ============================================================
+    // COSTRUTTORE PER I TEST (Sprint 4)
+    // ============================================================
+    public NoteRepository(DB testDb,
+                        ConcurrentMap<Integer, Note> testNotes,
+                        ConcurrentMap<String, Cartella> testFolders) {
+
+        this.db = testDb;
+        this.notes = testNotes;
+        this.folders = testFolders;
+
+        this.idCounter = notes.isEmpty()
+                ? 1
+                : Collections.max(notes.keySet()) + 1;
+
+        normalizzaNote(); // Riusa la logica del repository reale
+    }
+
+    // ============================================================
+    // UTILITY
+    // ============================================================
+
+    private synchronized int nextId() {
+        return idCounter++;
     }
 
     private void commit() {
         db.commit();
     }
 
-    private synchronized int nextId() {
-        return idCounter++;
-    }
-
-    private void normalizzaNote() {
-        for (Note n : notes.values()) {
-            if (n.getUtentiCondivisi() == null)
-                n.setUtentiCondivisi(new LinkedHashSet<>());
-            if (n.getVersioni() == null)
-                n.setVersioni(new ArrayList<>());
-            if (n.getPermesso() == null)
-                n.setPermesso(new Privata());
-            if (n.getCreatedAt() == null)
-                n.setCreatedAt(LocalDateTime.now());
-        }
-        commit();
-    }
-
     // ============================================================
-    // CRUD
+    // NOTE — CRUD
     // ============================================================
 
     public synchronized List<Note> findAll() {
@@ -86,49 +130,110 @@ public class NoteRepository {
     }
 
     public synchronized void save(Note note) {
-        boolean nuova = (note.getId() == 0);
+        boolean nuova = note.getId() == 0;
+
         if (nuova) {
             note.setId(nextId());
         }
 
-        if (note.getUtentiCondivisi() == null)
+        if (note.getUtentiCondivisi() == null) {
             note.setUtentiCondivisi(new LinkedHashSet<>());
-        if (note.getVersioni() == null)
+        }
+        if (note.getVersioni() == null) {
             note.setVersioni(new ArrayList<>());
-        if (note.getPermesso() == null)
+        }
+        if (note.getPermesso() == null) {
             note.setPermesso(new Privata());
-        if (note.getCreatedAt() == null)
+        }
+        if (note.getCreatedAt() == null) {
             note.setCreatedAt(LocalDateTime.now());
+        }
+        if (note.getColoreCartella() == null || note.getColoreCartella().isBlank()) {
+            note.setColoreCartella("#ffb347");
+        }
 
         notes.put(note.getId(), note);
         aggiornaCartella(note);
+
         commit();
     }
 
-    private void aggiornaCartella(Note note) {
-        if (note.getCartella() == null || note.getCartella().isBlank())
+    // ============================================================
+    // VERSIONAMENTO — RESTORE VERSION (Sprint 4)
+    // ============================================================
+    public synchronized void restoreVersion(int id, int index, String username) {
+
+        Note n = notes.get(id);
+        if (n == null)
             return;
 
-        String key = note.getCartella().trim().toLowerCase();
-        Cartella c = folders.computeIfAbsent(key,
-                k -> new Cartella(note.getCartella().trim(), note.getCreatore(), "#FFD700"));
+        List<VersioneNota> versioni = n.getVersioni();
+        if (versioni == null || index < 0 || index >= versioni.size())
+            return;
 
-        c.addNoteId(note.getId());
+        VersioneNota v = versioni.get(index);
+
+        // Salva versione corrente come versione precedente
+        n.salvaVersionePrecedente();
+
+        // Applica i dati della versione
+        n.setTitolo(v.getTitolo());
+        n.setContenuto(v.getContenuto());
+        n.setLastModifiedAt(LocalDateTime.now());
+        n.setLastModifiedBy(username);
+
+        notes.put(id, n);
+        commit();
+    }
+
+    // ============================================================
+    // CARTELLE — LOGICA COMPLETA SPRINT 4
+    // ============================================================
+
+    private void aggiornaCartella(Note n) {
+        // 1. La nota NON ha una cartella → niente da fare
+        if (n.getCartella() == null || n.getCartella().isBlank()) {
+            return;
+        }
+
+        String key = n.getCartella().trim().toLowerCase();
+
+        // 2. Recupera la cartella se esiste, altrimenti la crea
+        Cartella c = folders.get(key);
+
+        if (c == null) {
+            // La nota ha un colore? → usalo
+            String coloreCartella = (n.getColoreCartella() != null && !n.getColoreCartella().isBlank())
+                    ? n.getColoreCartella()
+                    : "#FFD700";
+
+            c = new Cartella(n.getCartella().trim(), n.getCreatore(), coloreCartella);
+            folders.put(key, c);
+        }
+
+        // 3. Sincronizzazione colore:
+        // Se la nota ha un colore → aggiorna la cartella
+        if (n.getColoreCartella() != null && !n.getColoreCartella().isBlank()) {
+            c.setColore(n.getColoreCartella());
+        }
+        // Se la nota NON ha colore → eredita il colore della cartella
+        else {
+            n.setColoreCartella(c.getColore());
+        }
+
+        // 4. Associa ID nota alla cartella
+        c.addNoteId(n.getId());
+
+        // 5. Salva cartella e nota aggiornate
         folders.put(key, c);
+        notes.put(n.getId(), n);
     }
 
     public synchronized void delete(int id) {
         Note n = notes.remove(id);
+
         if (n != null) {
             rimuoviNotaDallaCartella(n);
-        }
-
-        if (n != null && n.getCartella() != null) {
-            String key = n.getCartella().trim().toLowerCase();
-            Cartella c = folders.get(key);
-            if (c != null && c.getNoteIds().isEmpty()) {
-                folders.remove(key);
-            }
         }
 
         commit();
@@ -140,75 +245,240 @@ public class NoteRepository {
 
         String key = n.getCartella().trim().toLowerCase();
         Cartella c = folders.get(key);
+
         if (c != null) {
             c.removeNoteId(n.getId());
+            folders.put(key, c);
         }
     }
 
     // ============================================================
-    // VERSIONAMENTO
+    // GESTIONE LOCK NOTE — VERSIONE COMPLETA
     // ============================================================
-    @SuppressWarnings("DuplicatedCode")
-    public synchronized void restoreVersion(int id, int index, String username) {
+
+    /**
+     * Prova a prendere il lock sulla nota.
+     * Ritorna:
+     * - true → lock acquisito
+     * - false → lock detenuto da altro utente e ancora valido
+     */
+    public synchronized boolean tryLock(int id, String username) {
+        Note n = notes.get(id);
+        if (n == null)
+            return false;
+
+        // Se non c'è un lock attivo → lo prende subito
+        if (!n.hasActiveLock()) {
+            n.acquireLock(username);
+            notes.put(id, n);
+            commit();
+            return true;
+        }
+
+        // Se il lock è scaduto → può "rubarlo"
+        if (n.isLockExpired(LOCK_TIMEOUT_MINUTES)) {
+            n.acquireLock(username);
+            notes.put(id, n);
+            commit();
+            return true;
+        }
+
+        // Se il lock è suo → rinnova e OK
+        if (n.isLockedBy(username)) {
+            n.acquireLock(username); // aggiorna lockedAt
+            notes.put(id, n);
+            commit();
+            return true;
+        }
+
+        // Lock ancora attivo di altro utente
+        return false;
+    }
+
+    /**
+     * Rinnova un lock già posseduto dallo stesso utente.
+     * Se non è suo → nessun effetto.
+     */
+    public synchronized void refreshLock(int id, String username) {
+        Note n = notes.get(id);
+        if (n == null)
+            return;
+
+        if (n.isLockedBy(username)) {
+            n.acquireLock(username);
+            notes.put(id, n);
+            commit();
+        }
+    }
+
+    /**
+     * Sblocca una nota SE:
+     * - chi chiama è il proprietario del lock
+     * - OPPURE il lock è scaduto
+     */
+    public synchronized void unlockIfOwnerOrExpired(int id, String username) {
+        Note n = notes.get(id);
+        if (n == null)
+            return;
+
+        boolean expired = n.isLockExpired(LOCK_TIMEOUT_MINUTES);
+        boolean owner = n.isLockedBy(username);
+
+        if (expired || owner) {
+            n.clearLock();
+            notes.put(id, n);
+            commit();
+        }
+    }
+
+    /**
+     * Restituisce il proprietario del lock SE e solo SE il lock è ancora valido.
+     * Se il lock è scaduto → lo rimuove e ritorna Optional.empty().
+     */
+    public synchronized Optional<String> getEffectiveLockOwner(int id) {
+        Note n = notes.get(id);
+        if (n == null)
+            return Optional.empty();
+
+        if (!n.hasActiveLock())
+            return Optional.empty();
+
+        if (n.isLockExpired(LOCK_TIMEOUT_MINUTES)) {
+            n.clearLock();
+            notes.put(id, n);
+            commit();
+            return Optional.empty();
+        }
+
+        return Optional.ofNullable(n.getLockedBy());
+    }
+
+    // ============================================================
+    // ADAPTER COMPATIBILI CON IL SERVICE (lockNote, unlockNote, getLockState)
+    // ============================================================
+
+    /** Wrapper per NoteService.lock() */
+    public synchronized boolean lockNote(int id, String username) {
+        return tryLock(id, username);
+    }
+
+    /** Sblocca solo se owner o lock scaduto */
+    public synchronized boolean unlockNote(int id, String username) {
+        Note before = notes.get(id);
+        if (before == null)
+            return false;
+
+        // usa la logica ufficiale di sblocco
+        unlockIfOwnerOrExpired(id, username);
+
+        Note after = notes.get(id);
+
+        // se lockedBy è null → sbloccata correttamente
+        return after.getLockedBy() == null;
+    }
+
+    /** Sblocco forzato — usato solo in casi particolari */
+    public synchronized void forceUnlock(int id) {
+        Note n = notes.get(id);
+        if (n == null)
+            return;
+
+        n.clearLock();
+        notes.put(id, n);
+        commit();
+    }
+
+    /** Usato da GET /lock */
+    public synchronized Map<String, Object> getLockState(int id) {
+        Map<String, Object> out = new HashMap<>();
+        Note n = notes.get(id);
+
+        if (n == null) {
+            out.put("locked", false);
+            return out;
+        }
+
+        // lock non esiste o scaduto → rimuovi
+        if (!n.hasActiveLock() || n.isLockExpired(LOCK_TIMEOUT_MINUTES)) {
+            n.clearLock();
+            notes.put(id, n);
+            commit();
+            out.put("locked", false);
+            return out;
+        }
+
+        out.put("locked", true);
+        out.put("lockedBy", n.getLockedBy());
+        out.put("lockedAt", n.getLockedAt().toString());
+        return out;
+    }
+
+    // ============================================================
+    // CONDIVISIONE — REGOLE SPRINT 4
+    // ============================================================
+
+    /**
+     * Aggiunge utenti alla condivisione (solo aggiunta)
+     * — Usata dall’autore quando modifica la nota.
+     */
+    public synchronized void addUsersToShare(int id, Set<String> nuoviUtenti) {
+       
+        if (nuoviUtenti == null || nuoviUtenti.isEmpty())
+            return;
 
         Note n = notes.get(id);
         if (n == null)
             return;
 
-        List<VersioneNota> versioni = n.getVersioni();
-        if (versioni == null || index < 0 || index >= versioni.size())
-            return;
+        Set<String> esistenti = n.getUtentiCondivisi();
+        if (esistenti == null) {
+            esistenti = new LinkedHashSet<>();
+        }
 
-        // 1) Preleva la versione da ripristinare
-        VersioneNota restore = versioni.get(index);
-
-        // 2) Crea la versione che rappresenta lo stato attuale (prima del ripristino)
-        VersioneNota overwritten = new VersioneNota(
-                n.getTitolo(),
-                n.getContenuto(),
-                LocalDateTime.now());
-
-        // 3) Applica il ripristino
-        n.setTitolo(restore.getTitolo());
-        n.setContenuto(restore.getContenuto());
-        n.setLastModifiedAt(LocalDateTime.now());
-        n.setLastModifiedBy(username);
-
-        // 4) Sostituisce la versione ripristinata con quella sovrascritta
-        versioni.set(index, overwritten);
-        n.setVersioni(versioni);
+        esistenti.addAll(nuoviUtenti);
+        n.setUtentiCondivisi(esistenti);
 
         notes.put(id, n);
         commit();
     }
 
-    // ============================================================
-    // SHARING
-    // ============================================================
-
-    public synchronized void addUsersToShare(int id, Set<String> nuovi) {
-        if (nuovi == null || nuovi.isEmpty())
-            return;
+    /**
+     * L’utente condiviso può rimuovere solo sé stesso
+     */
+    public synchronized void removeSelf(int id, String username) {
         Note n = notes.get(id);
         if (n == null)
             return;
 
-        Set<String> updated = n.getUtentiCondivisi();
-        updated.addAll(nuovi);
-        n.setUtentiCondivisi(updated);
+        Set<String> condivisi = n.getUtentiCondivisi();
+        if (condivisi != null) {
+            condivisi.remove(username);
+            n.setUtentiCondivisi(condivisi);
+        }
 
         notes.put(id, n);
         commit();
     }
 
-    public synchronized void removeSelf(int id, String user) {
+    /**
+     * Condivisione iniziale alla creazione della nota.
+     * (Il permesso non viene più modificato qui.)
+     */
+    public synchronized void shareNoteWithUsers(int id, Set<String> utenti, Permesso permesso) {
+        if (utenti == null || utenti.isEmpty())
+            return;
+
         Note n = notes.get(id);
         if (n == null)
             return;
 
-        Set<String> set = n.getUtentiCondivisi();
-        set.remove(user);
-        n.setUtentiCondivisi(set);
+        Set<String> condivisi = n.getUtentiCondivisi();
+        if (condivisi == null) {
+            condivisi = new LinkedHashSet<>();
+        }
+
+        condivisi.addAll(utenti);
+        n.setUtentiCondivisi(condivisi);
 
         notes.put(id, n);
         commit();
@@ -216,11 +486,12 @@ public class NoteRepository {
 
     public List<Note> findSharedWithUser(String username) {
         if (username == null || username.isBlank())
-            return List.of();
+            return Collections.emptyList();
 
         List<Note> result = new ArrayList<>();
+
         for (Note n : notes.values()) {
-            if (n.getUtentiCondivisi().contains(username)) {
+            if (n != null && n.getUtentiCondivisi() != null && n.getUtentiCondivisi().contains(username)) {
                 result.add(n);
             }
         }
@@ -231,29 +502,32 @@ public class NoteRepository {
 
     public List<Note> findByCreator(String username) {
         if (username == null || username.isBlank())
-            return List.of();
+            return Collections.emptyList();
 
         List<Note> result = new ArrayList<>();
+
         for (Note n : notes.values()) {
-            if (username.equalsIgnoreCase(n.getCreatore())) {
+            if (n != null && username.equalsIgnoreCase(n.getCreatore())) {
                 result.add(n);
             }
         }
+
         result.sort(NOTE_DATE_DESC);
         return result;
     }
 
     // ============================================================
-    // CARTELLE
+    // CARTELLE - API SPRINT 4
     // ============================================================
 
     public synchronized void createFolder(String nome, String creatore, String colore) {
         if (nome == null || nome.isBlank())
             return;
+
         String key = nome.trim().toLowerCase();
 
         if (folders.containsKey(key)) {
-            throw new IllegalArgumentException("Cartella già esistente.");
+            throw new IllegalArgumentException("La cartella '" + nome + "' esiste già.");
         }
 
         if (colore == null || colore.isBlank())
@@ -282,10 +556,11 @@ public class NoteRepository {
         Cartella c = folders.remove(key);
 
         if (c != null) {
-            for (int id : c.getNoteIds()) {
-                Note n = notes.get(id);
+            for (int noteId : c.getNoteIds()) {
+                Note n = notes.get(noteId);
                 if (n != null) {
                     n.setCartella(null);
+                    notes.put(noteId, n);
                 }
             }
         }
@@ -293,20 +568,25 @@ public class NoteRepository {
         commit();
     }
 
-    public List<Note> findByCartella(String nome) {
-        if (nome == null || nome.isBlank())
-            return List.of();
+    public List<Note> findByCartella(String nomeCartellaRaw) {
 
-        String key = nome.trim().toLowerCase();
+        if (nomeCartellaRaw == null || nomeCartellaRaw.isBlank()) {
+            return Collections.emptyList();
+        }
+
+        String key = nomeCartellaRaw.trim().toLowerCase();
+
         Cartella c = folders.get(key);
-        if (c == null)
-            return List.of();
+        if (c == null) {
+            return Collections.emptyList();
+        }
 
         List<Note> result = new ArrayList<>();
-        for (int id : c.getNoteIds()) {
-            Note n = notes.get(id);
-            if (n != null)
+        for (int noteId : c.getNoteIds()) {
+            Note n = notes.get(noteId);
+            if (n != null) {
                 result.add(n);
+            }
         }
 
         result.sort(NOTE_DATE_DESC);
@@ -315,72 +595,5 @@ public class NoteRepository {
 
     public void close() {
         db.close();
-    }
-
-    // ============================================================
-    // LOCK SEMPLIFICATO — Sprint 3
-    // ============================================================
-
-    public synchronized boolean lockNote(int id, String username) {
-        Note n = notes.get(id);
-        if (n == null)
-            return false;
-
-        // Nessun lock attivo → assegna
-        if (n.getLockedBy() == null) {
-            n.setLockedBy(username);
-            n.setLockedAt(LocalDateTime.now());
-            notes.put(id, n);
-            commit();
-            return true;
-        }
-
-        // Stesso utente → ok
-        if (username.equalsIgnoreCase(n.getLockedBy())) {
-            return true;
-        }
-
-        // Altro utente → NON consentito nello Sprint 3
-        return false;
-    }
-
-    public synchronized boolean unlockNote(int id, String username) {
-        Note n = notes.get(id);
-        if (n == null)
-            return false;
-
-        if (username.equalsIgnoreCase(n.getLockedBy())) {
-            n.setLockedBy(null);
-            n.setLockedAt(null);
-            notes.put(id, n);
-            commit();
-            return true;
-        }
-        return false;
-    }
-
-    public synchronized void forceUnlock(int id) {
-        Note n = notes.get(id);
-        if (n == null)
-            return;
-
-        n.setLockedBy(null);
-        n.setLockedAt(null);
-        notes.put(id, n);
-        commit();
-    }
-
-    public Map<String, Object> getLockState(int id) {
-        Note n = notes.get(id);
-        if (n == null)
-            return Map.of();
-
-        if (n.getLockedBy() == null) {
-            return Map.of();
-        }
-
-        return Map.of(
-                "lockedBy", n.getLockedBy(),
-                "lockedAt", n.getLockedAt());
     }
 }
